# SpinDry

./: .gitignore  .readthedocs.yaml  README.rst  justfile  pyproject.toml  readme.rst  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  modules.rst  spd.rst
examples/: comp_new_guest.mol  component_example.py  custom_pot_fn_out.mol  custom_potential_example.py  eg_guest.xyz  eg_guest2.xyz  eg_host.xyz  host_guest.mol  host_guest_out.mol  host_multi_guest.mol  host_multi_guest_out.mol  minimum_example.py  multi_guest_example.py  stk_example.py
examples/component_example/: comp_new_guest.mol
examples/custom_potential_example/: custom_pot_fn_out.mol  poc.mol
examples/min_example_output/: conf_0.xyz  conf_1.xyz  conf_10.xyz  conf_2.xyz  conf_3.xyz  conf_4.xyz  conf_5.xyz  conf_6.xyz  conf_7.xyz  conf_8.xyz  conf_9.xyz  host_guest_out.mol
examples/multi_example_output/: conf_0.xyz  conf_1.xyz  conf_2.xyz  conf_3.xyz  conf_4.xyz  conf_5.xyz  conf_6.xyz  conf_7.xyz  conf_8.xyz  conf_9.xyz
examples/multi_guest_output/: host_multi_guest.mol  host_multi_guest_out.mol
examples/stk_example_output/: conf_0.mol  conf_0.xyz  conf_1.xyz  conf_10.mol  conf_10.xyz  conf_11.mol  conf_11.xyz  conf_12.mol  conf_12.xyz  conf_13.mol  conf_13.xyz  conf_14.mol  conf_14.xyz  conf_15.mol  conf_15.xyz  conf_16.mol  conf_16.xyz  conf_17.mol  conf_17.xyz  conf_18.mol  conf_18.xyz  conf_19.mol  conf_19.xyz  conf_2.mol  conf_2.xyz  conf_20.mol  conf_20.xyz  conf_21.mol  (+18 more)
spindry/: __init__.py  atom.py  bond.py  molecule.py  potential.py  spinner.py  supramolecule.py  utilities.py
tests/: conftest.py  test_utilities.py  utilities.py
(+29 files in other folders)
