[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SpinDry"
maintainers = [
  { name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" },
]
dependencies = [
  "MCHammer",
]
requires-python = ">=3.6"
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pip-tools",
  "pytest<8",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "twine",
  "sphinx_rtd_theme",
  "stk",
]


[project.urls]
github = "https://github.com/andrewtarzia/SpinDry"

[tool.setuptools_scm]
write_to = "src/spindry/_version.py"

[tool.setuptools.packages.find]
where = [
  # list of folders that contain the packages (["."] by default)
  "src/",
]

[tool.ruff]
line-length = 79
exclude = []

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "ISC001", "FBT001", "FBT002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "D100",
    "D103",
    "D104",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
  "matplotlib.*",
  "mchammer.*",
  "networkx.*",
  "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
